adding some more images

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -97,6 +97,26 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="600">
+                <div class="card border-0 shadow-sm h-100 overflow-hidden service-card">
+                    <img src="{{ url_for('static', filename='images/equipment7.jpeg') }}" class="card-img-top"
+                        alt="Manya Diagnostic Center Building" style="height: 250px; object-fit: cover;">
+                    <div class="card-body text-center">
+                        <p class="card-text text-muted">EEG MACHINE</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="600">
+                <div class="card border-0 shadow-sm h-100 overflow-hidden service-card">
+                    <img src="{{ url_for('static', filename='images/equipment8.jpeg') }}" class="card-img-top"
+                        alt="Manya Diagnostic Center Building" style="height: 250px; object-fit: cover;">
+                    <div class="card-body text-center">
+                        <p class="card-text text-muted">ECG MACHINE</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
