--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -90,7 +90,7 @@
 
             <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="600">
                 <div class="card border-0 shadow-sm h-100 overflow-hidden service-card">
-                    <img src="{{ url_for('static', filename='images/equipment6.jpeg') }}" class="card-img-top"
+                    <img src="{{ url_for('static', filename='images/equipment6.jpg') }}" class="card-img-top"
                         alt="Manya Diagnostic Center Building" style="height: 250px; object-fit: cover;">
                     <div class="card-body text-center">
                         <p class="card-text text-muted">MRI 1.5T SIMENS MRI MACHINE</p>
